<resources>
    <string name="app_name">SI2</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="false">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="restablecer_contrase_a">Restablecer Contraseña</string>
    <string name="aleatorio_gmail_com">aleatorio@gmail.com</string>
    <string name="recuperar">Recuperar</string>
    <string name="correo">Correo</string>
    <string name="aceptar">Aceptar</string>
    <string name="verifique_su_correo">Verifique su correo</string>
    <string name="verificar">verificar</string>
    <string-array name="generos">
        <item>comedia</item>
        <item>drama</item>
        <item>fantasia</item>
        <item>drama</item>
        <item>belico</item>
        <item>suspenso</item>
        <item>juvenil</item>
        <item>juvenil</item>
        <item>juvenil</item>
        <item>juvenil</item>

    </string-array>
</resources>