<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificarCorreo">
    <TextView
        android:id="@+id/uno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifique_su_correo"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/correo_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uno"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"

        android:text="@string/correo"
        android:textColor="@color/color_primary"
        android:textSize="20sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajacorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/correo_texto"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/icon_email">


        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:hint="@string/aleatorio_gmail_com"
            android:layout_height="wrap_content"
            android:layout_below="@+id/correo_texto"
            android:drawableStart="@drawable/icon_email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/entrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cajacorreo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/color_primary"
        android:gravity="center"
        android:onClick="verificar"
        android:text="@string/verificar"
        app:cornerRadius="30dp"
        />

</RelativeLayout>